# arc

./: .gitignore  CLAUDE.md  Dockerfile.worker  README.md  dev.env  docker-compose.worker.yml  install-worker.sh  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 63bbc337c17a_initial_schema.py  a1b2c3d4e5f6_add_filter_columns_to_pages.py  b2c3d4e5f6a7_add_nsfw_columns.py  c3d4e5f6a7b8_add_icon_score_to_image_embeddings.py  c9c360d94d43_add_links_harvested_at_to_pages.py
scripts/: build-installer.sh  build-worker-package.sh  migrate_to_shards.py  setup-dev.sh
src/semantic_searcher/: config.py  database.py  main.py
src/semantic_searcher/middleware/: rate_limit.py  worker_auth.py
src/semantic_searcher/models/: db.py  schemas.py  worker_schemas.py
src/semantic_searcher/routers/: crawl.py  health.py  index.py  search.py  worker.py
src/semantic_searcher/services/: clip_service.py  content_classifier.py  crawler.py  ct_watcher.py  es_client.py  indexer.py  link_harvester.py  qdrant_collections.py  remote_crawl_client.py  renderer.py  search_backend.py  search_coordinator.py  search_queue.py  searcher.py  secret_loader.py  shard_manager.py  subdomain_enum.py  text_encoder.py  (+3 more)
static/: edu_index.html  index.html  maintenance.html  opensearch.xml  robots.txt  sitemap.xml
tests/: conftest.py  test_commoncrawl.py  test_crawler.py  test_ct_watcher.py  test_distributed.py  test_image_search.py  test_link_extractor.py  test_search.py  test_tokenizer.py
worker-deploy/: arcsearch-worker.service  entrypoint.sh  env.worker  setup-worker.sh
(+8 files in other folders)
